datasets/demo/repositories/k8s-platform/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: platform
spec:
  tls:
    - hosts:
        - "*.apps.k8s.example.in"
      secretName: kube-ingress-tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-proxy
spec:
  template:
    spec:
      containers:
        - name: edge-proxy
          image: envoyproxy/envoy:v1.29.1
